--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,9 +5,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --blue: #007bff;
+  --purple: #2a134e;
   --indigo: #6610f2;
-  --purple: #6f42c1;
+  --blue: #73a1d6;
   --pink: #e83e8c;
   --red: #dc3545;
   --orange: #fd7e14;
@@ -21,7 +21,7 @@
   --primary: #007bff;
   --secondary: #6c757d;
   --success: #28a745;
-  --info: #17a2b8;
+  --info: #0c5d69;
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
